# python-aws-cognito

./: .env.example  .gitignore  README.md  pyproject.toml
src/cognito_user/: __init__.py  client.py  config.py  create_users.py  delete_users.py  tui.py
